Fixed viewport overflow on splash image

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     background-color: #ffffff;
+    margin: 0;
+    padding: 0;
     }
     h1 {
     font-family: Lexend Deca;
@@ -54,10 +56,7 @@ body {
     .splash-image {
         width: 100vw;
         height: auto;
-        /* object-fit: contain; */
-        /* background-repeat: no-repeat; */
-        /* background-size: cover; */
-        /* overflow: hidden; */
-        border: 4px solid rgb(30, 194, 66);
+        max-width: 100%;
+        background-repeat: no-repeat;
     }
     
